my voice page photo credit fixed on mobile.

--- a/docroot/sites/all/themes/ambitious/sass/content.scss
+++ b/docroot/sites/all/themes/ambitious/sass/content.scss
@@ -905,7 +905,7 @@
         //padding: 0 15px 0 0;
         @include breakpoint($mobile) {
             padding: 15px 15px;
-            margin-top: 0;
+            margin-top: 3.5em;
         }
     }
     //overwrite jcf settings TODO check this + border is still darker than the others
